@@ -6,6 +6,7 @@ v0.5.0 (xx xxx 2008)
 ====================
  * The "who the hell is that?" release
  * Can now automatically show the user info pop-up on authorization requests
+ * Removed legacy blocking feature (adding "   " to a contact's alias)
  * Code cleanup
 
 v0.4.1 (04 Apr 2008)
